--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+/*Google font styles link*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=WDXL+Lubrifont+TC&display=swap');
+
 body {
     background-color: blue;
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-family: 'WDXL Lubrifont TC', sans-serif;
 }
