--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ p {
 }
 
 #navbar .logo {
-    width: 40px;
+    width: 70px;
 }
 
 #hero-home {
@@ -54,4 +54,41 @@ p {
     padding: 5% 4%;
     background-color: #dbdcde;
     /*light grey*/
+}
+
+/*Footer /Contact section */
+#contact {
+    background-color: var(--primary-color);
+    color: white;
+    padding-bottom: 3rem;
+}
+
+#contact h2 {
+    color: white;
+}
+
+#contact .sub-heading-color {
+    color: var(--highlight-color-light);
+}
+
+#contact i {
+    color: var(--secondary-color);
+    font-size: 1.5rem;
+    padding-right: 15px;
+}
+
+#contact .social-links i {
+    color: var(--highlight-color-light);
+    font-size: 1.9rem;
+    -webkit-transition: color 0.3s ease-in-out;
+    -o-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
+}
+
+#contact .social-links i:hover {
+    color: var(--secondary-color);
+}
+
+#contact .table-dark * {
+    background-color: transparent;
 }
